cmake_minimum_required(VERSION 4.0)
project(2025)

set(CMAKE_CXX_STANDARD 23)

add_executable(2025 main.cpp
        Day01/Day01.cpp
        Day01/Day01.h
        Day02/Day02.cpp
        Day02/Day02.h
        Utility/Utilitiy.cpp
        Utility/Utilitiy.h
        Day03/Day03.cpp
        Day03/Day03.h
)
